@@ -19,15 +19,16 @@
 package org.elasticsearch.action.admin.indices.datastream;
 
 import org.elasticsearch.ResourceNotFoundException;
-import org.elasticsearch.action.admin.indices.datastream.GetDataStreamsAction.Request;
+import org.elasticsearch.action.admin.indices.datastream.GetDataStreamAction.Request;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.DataStreamTestHelper;
 import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.test.AbstractWireSerializingTestCase;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -63,52 +64,57 @@ public class GetDataStreamsRequestTests extends AbstractWireSerializingTestCase<
 
     public void testGetDataStream() {
         final String dataStreamName = "my-data-stream";
-        DataStream existingDataStream = new DataStream(dataStreamName, "timestamp", Collections.emptyList());
+        IndexMetadata idx = DataStreamTestHelper.createFirstBackingIndex(dataStreamName).build();
+        DataStream existingDataStream = new DataStream(dataStreamName, "timestamp", List.of(idx.getIndex()));
         ClusterState cs = ClusterState.builder(new ClusterName("_name"))
             .metadata(Metadata.builder().dataStreams(Map.of(dataStreamName, existingDataStream)).build()).build();
-        GetDataStreamsAction.Request req = new GetDataStreamsAction.Request(dataStreamName);
-        List<DataStream> dataStreams = GetDataStreamsAction.TransportAction.getDataStreams(cs, req);
+        GetDataStreamAction.Request req = new GetDataStreamAction.Request(dataStreamName);
+        List<DataStream> dataStreams = GetDataStreamAction.TransportAction.getDataStreams(cs, req);
         assertThat(dataStreams.size(), equalTo(1));
         assertThat(dataStreams.get(0).getName(), equalTo(dataStreamName));
     }
 
     public void testGetDataStreamsWithWildcards() {
         final String[] dataStreamNames = {"my-data-stream", "another-data-stream"};
-        DataStream ds1 = new DataStream(dataStreamNames[0], "timestamp", Collections.emptyList());
-        DataStream ds2 = new DataStream(dataStreamNames[1], "timestamp", Collections.emptyList());
+        IndexMetadata idx1 = DataStreamTestHelper.createFirstBackingIndex(dataStreamNames[0]).build();
+        IndexMetadata idx2 = DataStreamTestHelper.createFirstBackingIndex(dataStreamNames[1]).build();
+
+        DataStream ds1 = new DataStream(dataStreamNames[0], "timestamp", List.of(idx1.getIndex()));
+        DataStream ds2 = new DataStream(dataStreamNames[1], "timestamp", List.of(idx2.getIndex()));
         ClusterState cs = ClusterState.builder(new ClusterName("_name"))
             .metadata(Metadata.builder().dataStreams(
                 Map.of(dataStreamNames[0], ds1, dataStreamNames[1], ds2)).build())
             .build();
 
-        GetDataStreamsAction.Request req = new GetDataStreamsAction.Request(dataStreamNames[1].substring(0, 5) + "*");
-        List<DataStream> dataStreams = GetDataStreamsAction.TransportAction.getDataStreams(cs, req);
+        GetDataStreamAction.Request req = new GetDataStreamAction.Request(dataStreamNames[1].substring(0, 5) + "*");
+        List<DataStream> dataStreams = GetDataStreamAction.TransportAction.getDataStreams(cs, req);
         assertThat(dataStreams.size(), equalTo(1));
         assertThat(dataStreams.get(0).getName(), equalTo(dataStreamNames[1]));
 
-        req = new GetDataStreamsAction.Request("*");
-        dataStreams = GetDataStreamsAction.TransportAction.getDataStreams(cs, req);
+        req = new GetDataStreamAction.Request("*");
+        dataStreams = GetDataStreamAction.TransportAction.getDataStreams(cs, req);
         assertThat(dataStreams.size(), equalTo(2));
         assertThat(dataStreams.get(0).getName(), equalTo(dataStreamNames[1]));
         assertThat(dataStreams.get(1).getName(), equalTo(dataStreamNames[0]));
 
-        req = new GetDataStreamsAction.Request((String) null);
-        dataStreams = GetDataStreamsAction.TransportAction.getDataStreams(cs, req);
+        req = new GetDataStreamAction.Request((String) null);
+        dataStreams = GetDataStreamAction.TransportAction.getDataStreams(cs, req);
         assertThat(dataStreams.size(), equalTo(2));
         assertThat(dataStreams.get(0).getName(), equalTo(dataStreamNames[1]));
         assertThat(dataStreams.get(1).getName(), equalTo(dataStreamNames[0]));
 
-        req = new GetDataStreamsAction.Request("matches-none*");
-        dataStreams = GetDataStreamsAction.TransportAction.getDataStreams(cs, req);
+        req = new GetDataStreamAction.Request("matches-none*");
+        dataStreams = GetDataStreamAction.TransportAction.getDataStreams(cs, req);
         assertThat(dataStreams.size(), equalTo(0));
     }
 
     public void testGetNonexistentDataStream() {
         final String dataStreamName = "my-data-stream";
         ClusterState cs = ClusterState.builder(new ClusterName("_name")).build();
-        GetDataStreamsAction.Request req = new GetDataStreamsAction.Request(dataStreamName);
+        GetDataStreamAction.Request req = new GetDataStreamAction.Request(dataStreamName);
         ResourceNotFoundException e = expectThrows(ResourceNotFoundException.class,
-            () -> GetDataStreamsAction.TransportAction.getDataStreams(cs, req));
+            () -> GetDataStreamAction.TransportAction.getDataStreams(cs, req));
         assertThat(e.getMessage(), containsString("data_stream matching [" + dataStreamName + "] not found"));
     }
+
 }
